--- a/src/css/02-timer.css
+++ b/src/css/02-timer.css
@@ -1,37 +1,48 @@
 
 .title{
+    font-size: 50px;
     color: rgb(233, 29, 189);
     text-transform: uppercase;
-    font-size: 50px;
     text-align: center;
+}
+
+.wrap{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-bottom: 20px;
 }
 
 .timer{
     display: flex;
     justify-content: center;
-    font-size: 40px;
+    font-size: 25px;
     
 }
 
 .field{
-    margin-left: 30px;
+    margin-right: 20px;
+    text-align: center;
+}
+
+.field:last-child{
+    margin-right: 0;
 }
 
 #datetime-picker{
-    width: 350px;
+    /* width: 350px; */
     height: 40px;
-    display: inline-block;
-    margin-left: 400px;
+    display: block;
     margin-bottom: 20px;
 }
 
 button[data-start]{
     font-size: 20px;
-    display: inline-block;
-    margin-left: 20px;
+    display: block;
     background: linear-gradient( rgb(35, 132, 189), yellow);
     width: 150px;
     padding: 10px;
+    margin-left: 20px;
     border: none;
     border-radius: 5px;
 }
